fixed html overflow

--- a/apps/ui/src/app/study/study.component.scss
+++ b/apps/ui/src/app/study/study.component.scss
@@ -6,7 +6,7 @@
   &:hover {
     box-shadow: inset 0 0 25px 25px rgba(0, 0, 0, 0.2);
   }
-  div {
+  strong {
     font-size: 12px;
     white-space: nowrap;
   }
